# vibecode-b24-bot

./: .gitignore  Dockerfile  LICENSE  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: ai_assistant.py  crm_dashboard.py  echo_bot.py  openai_agent_bot.py  openai_agent_with_tools.py
src/vibecode/: __init__.py  bot.py  client.py  types.py
src/vibecode_b24_bot/: __init__.py  bot.py  formatting.py  types.py
tests/: conftest.py  test_bot.py  test_client.py  test_formatting.py  test_types.py
