[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibecode"
version = "0.1.0"
description = "Python SDK for Bitrix24 via VibeCode API — bots, CRM, tasks and 35+ entities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Valerii Kovalskii" },
]
keywords = ["bitrix24", "vibecode", "bot", "crm", "sdk", "chatbot", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/vakovalskii/vibecode-sdk"
Documentation = "https://github.com/vakovalskii/vibecode-sdk#readme"
Repository = "https://github.com/vakovalskii/vibecode-sdk"
Issues = "https://github.com/vakovalskii/vibecode-sdk/issues"
