[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecode-b24-bot"
version = "0.2.0"
description = "Python SDK for Bitrix24 bots via VibeCode API — async framework like aiogram"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Valerii Kovalskii" },
]
keywords = ["bitrix24", "vibecode", "bot", "crm", "sdk", "chatbot", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/vakovalskii/vibecode-b24-bot"
Documentation = "https://github.com/vakovalskii/vibecode-b24-bot#readme"
Repository = "https://github.com/vakovalskii/vibecode-b24-bot"
Issues = "https://github.com/vakovalskii/vibecode-b24-bot/issues"
